force-app/main/default/objects/DR_SAP_SYNC_Settings__c/DR_SAP_SYNC_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Opp Reg &gt; SAP data sync job (DR_OPPREG_SAP_SYNC_Batch) uses this setup</description>
    <label>DR : SAP SYNC : Settings</label>
</CustomObject>