force-app/main/default/objects/DR_SAP_SYNC_Settings__c/fields/BATCHJOB_ENABLE_SCHDULED_JOB__c.field-meta.xml
<CustomField>
    <fullName>BATCHJOB_ENABLE_SCHDULED_JOB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to false, the batch job will terminated, but you need to run it manually to start again.
        DR_OPPREG_SAP_SYNC_Batch p = new DR_OPPREG_SAP_SYNC_Batch();
	DateTime currDT = DateTime.now().addMinutes(2);
	integer sec = currDT.second();
	integer min = currDT.minute();
	String sch = sec + &apos; &apos; + min + &apos; &apos; + &apos;* ? * *&apos;; //0 5 * * * ?
	system.debug(&apos;sch: &apos; + sch);
	system.schedule(&apos;Exec of DR_OPPREG_SAP_SYNC_Batch&apos;, sch, p);</description>
    <inlineHelpText>If set to false, the batch job will terminated, but you need to run it manually to start again. See the fields description field how to start the batch job that manages IDM users from SFDC</inlineHelpText>
    <label>BATCHJOB_ENABLE_SCHDULED_JOB</label>
    <type>Checkbox</type>
</CustomField>