force-app/main/default/objects/DR_SAP_SYNC_Settings__c/fields/BATCHJOB_LKBK_TIME__c.field-meta.xml
<CustomField>
    <fullName>BATCHJOB_LKBK_TIME__c</fullName>
    <description>Batch Job: Lookback time used in LastModifiedDate &gt; Now - LookbackTime</description>
    <inlineHelpText>Batch Job: Lookback time used in LastModifiedDate &gt; Now - LookbackTime</inlineHelpText>
    <label>BATCHJOB_LKBK_TIME</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>