force-app/main/default/objects/DR_SAP_SYNC_Settings__c/fields/CalloutTimeout__c.field-meta.xml
<CustomField>
    <fullName>CalloutTimeout__c</fullName>
    <description>Value of Timeout for the API call (90000)</description>
    <inlineHelpText>Value of Timeout for the API call (90000)</inlineHelpText>
    <label>CalloutTimeout</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>