force-app/main/default/objects/DR_SAP_SYNC_Settings__c/fields/DR_ApprovalProcessDefId__c.field-meta.xml
<CustomField>
    <fullName>DR_ApprovalProcessDefId__c</fullName>
    <defaultValue>&quot;04a1W0000008SIGQA2&quot;</defaultValue>
    <description>Lead Deal Registration Approval Process Definition Id (e.g., 04a1W0000008SIGQA2)</description>
    <inlineHelpText>Lead Deal Registration Approval Process Definition Id (e.g., 04a1W0000008SIGQA2)</inlineHelpText>
    <label>DR_ApprovalProcessDefId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>