force-app/main/default/objects/DR_SAP_SYNC_Settings__c/fields/NamedCredentialEndPoint__c.field-meta.xml
<CustomField>
    <fullName>NamedCredentialEndPoint__c</fullName>
    <description>End Point of the Named Named Credential used for SAP Opp Reg data sync (callout:SAP_OppReg)</description>
    <inlineHelpText>End Point of the Named Named Credential used for SAP Opp Reg data sync (callout:SAP_OppReg)</inlineHelpText>
    <label>NamedCredentialEndPoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>